# ReConduit

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
include/: AdapterConduit.hpp  AdapterReConduit.hpp  AlertingMessage.hpp  ConduitDispacher.hpp  ConduitFwd.hpp  ConduitLogger.hpp  ConduitPool.hpp  ConduitTypes.hpp  ConduitTypesGenerators.hpp  ConduitVisitors.hpp  EmbeddedMessage.hpp  FactoryConduit.hpp  FactoryReConduit.hpp  InformationChunkMessage.hpp  MessageTypes.hpp  MuxConduit.hpp  MuxReConduit.hpp  ProtocolConduit.hpp  ProtocolReConduit.hpp  ReConduitDispacher.hpp  ReConduitFwd.hpp  ReConduitLogger.hpp  ReConduitPool.hpp  ReConduitTypes.hpp  ReConduitTypesGenerators.hpp  ReConduitVisitors.hpp  ReleaseMessage.hpp  SetupMessage.hpp
test/: MockAdaptors.hpp  MockConduitTypes.hpp  MockFactories.cc  MockFactories.hpp  MockLogger.hpp  MockMessage.hpp  MockMuxes.hpp  MockPacket.hpp  MockProtocols.hpp  MockTCPStateMachine.hpp  conduits_test.cc
